--- a/PhotoBooth.DAL/PhotoBooth.DAL.csproj
+++ b/PhotoBooth.DAL/PhotoBooth.DAL.csproj
@@ -11,6 +11,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Riganti.Utils.Infrastructure.EntityFrameworkCore" Version="2.3.0" />
   </ItemGroup>
 
 </Project>
