--- a/PhotoBooth.BL/PhotoBooth.BL.csproj
+++ b/PhotoBooth.BL/PhotoBooth.BL.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Riganti.Utils.Infrastructure.EntityFrameworkCore" Version="2.3.0" />
+    <PackageReference Include="Scrutor" Version="3.3.0" />
   </ItemGroup>
 
   <ItemGroup>
