--- a/PhotoBooth.BL/PhotoBooth.BL.csproj
+++ b/PhotoBooth.BL/PhotoBooth.BL.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="10.1.1" />
     <PackageReference Include="Riganti.Utils.Infrastructure.EntityFrameworkCore" Version="2.3.0" />
     <PackageReference Include="Scrutor" Version="3.3.0" />
   </ItemGroup>
