--- a/UnitTests/UnitTests.csproj
+++ b/UnitTests/UnitTests.csproj
@@ -14,6 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\PhotoBooth.BL\PhotoBooth.BL.csproj" />
     <ProjectReference Include="..\PhotoBooth.DAL\PhotoBooth.DAL.csproj" />
   </ItemGroup>
 
