query rewriten, first facade done

--- a/PhotoBooth.BL/PhotoBooth.BL.csproj
+++ b/PhotoBooth.BL/PhotoBooth.BL.csproj
@@ -14,4 +14,8 @@
     <ProjectReference Include="..\PhotoBooth.DAL\PhotoBooth.DAL.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="bin\Debug\netcoreapp3.1\" />
+  </ItemGroup>
+
 </Project>
