--- a/PhotoBooth.WEB/Properties/launchSettings.json
+++ b/PhotoBooth.WEB/Properties/launchSettings.json
@@ -17,7 +17,7 @@
     },
     "PhotoBooth.WEB": {
       "commandName": "Project",
-      "launchBrowser": true,
+      "launchBrowser": false,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
