--- a/PhotoBooth.BL/PhotoBooth.BL.csproj
+++ b/PhotoBooth.BL/PhotoBooth.BL.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="10.1.1" />
+    <PackageReference Include="DotVVM" Version="2.5.0" />
     <PackageReference Include="Riganti.Utils.Infrastructure.EntityFrameworkCore" Version="2.3.0" />
     <PackageReference Include="Scrutor" Version="3.3.0" />
   </ItemGroup>
