--- a/PhotoBooth.DAL/PhotoBooth.DAL.csproj
+++ b/PhotoBooth.DAL/PhotoBooth.DAL.csproj
@@ -5,11 +5,22 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Migrations\20210112153746_seeding.cs" />
+    <Compile Remove="Migrations\20210112153746_seeding.Designer.cs" />
+    <Compile Remove="Migrations\20210112155422_seeding.cs" />
+    <Compile Remove="Migrations\20210112155422_seeding.Designer.cs" />
+    <Compile Remove="Migrations\20210112164326_seeding.cs" />
+    <Compile Remove="Migrations\20210112164326_seeding.Designer.cs" />
+    <Compile Remove="Migrations\20210112170455_seeding.cs" />
+    <Compile Remove="Migrations\20210112170455_seeding.Designer.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.9" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="3.1.9" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="3.1.9" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.9" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.9">
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.5">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
